<resources>
    <string name="app_name">Life Health</string>
    <string name="email_hint">Digite seu e-mail</string>
    <string name="password_hint">Digite sua senha</string>
    <string name="button_decrease_text_size">Diminuir Tamanho do Texto</string>
    <string name="button_increase_text_size">Aumentar Tamanho do Texto</string>
    <string name="presentation_text">"Ajudamos você a cuidar do seu bem mais precioso, a sua saúde."</string>
    <string name="logo_description">Logo do Life Health, que consiste em um circulo com bordas grossas em azul e preenchido com a cor branca em seu interior</string>
    <string name="login_button_description">Clique neste botão para fazer login com seu email e senha</string>
    <string name="register_link_description">Clique neste link para se cadastrar, caso ainda não possua conta no aplicativo</string>
    <string name="user_types_text">Selecione uma das opções abaixo, para realizar o cadastro.</string>
    <string name="privacy_policy_text">Ao se cadastrar você concorda com a nossa <b>política de privacidade</b>.</string>
    <string name="link_login">Já possui uma conta? <b>Faça login</b></string>
    <string name="link_register">Ainda não tem conta? Cadastre-se</string>
    <string name="login">Login</string>
    <string name="a">A-</string>
    <string name="b">A+</string>
    <string name="inserir_foto">Inserir foto</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="selecione_o_sexo_biol_gico">Selecione o sexo biológico?</string>
    <string name="crm">CRM</string>
    <string name="nome">Nome</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="e_mail">E-mail</string>
    <string name="todo">TODO</string>
    <string name="senha">Senha</string>
    <string name="m_dico">Médico</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="paciente">Paciente</string>
    <string name="especialidade_m_dica">Especialidade Médica</string>
</resources>