<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="27dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonIncreaseTextSize"
                    style="@style/RoundedButton"
                    android:layout_marginTop="28dp"
                    android:layout_marginRight="8dp"
                    android:contentDescription="@string/button_increase_text_size"
                    android:text="A+"
                    app:layout_constraintEnd_toStartOf="@+id/buttonDecreaseTextSize"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="48dp" />

                <Button
                    android:id="@+id/buttonDecreaseTextSize"
                    style="@style/RoundedButton"
                    android:layout_marginTop="28dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@string/button_decrease_text_size"
                    android:text="A-"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Campo de Carregamento de Imagem -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">
                <!-- Imagem com gone o campo não fica visivel ate o carregamento -->
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_launcher_foreground" />

                <Button
                    android:id="@+id/buttonChooseImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentBottom="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="0dp"
                    android:backgroundTint="#4894FF"
                    android:text="Inserir foto"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#FFF"
                    android:textSize="17sp" />


            </RelativeLayout>

            <TextView
                android:id="@+id/userTypes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/user_types_text"
                android:textColor="#040404" />


            <RadioGroup
                android:id="@+id/radioGroupUserType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonPatient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="210dp"
                    android:text="Paciente" />

                <RadioButton
                    android:id="@+id/radioButtonDoctor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Médico" />
            </RadioGroup>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Nome"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextSobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Sobrenome"
                android:inputType="text" />

            <EditText
                android:id="@+id/emailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="E-mail"
                android:inputType="textWebEmailAddress" />

            <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="Senha"
                android:inputType="textPassword" />

            <!-- Campo de Seleção alterar visibilidade de acordo com o tipo de usuario-->
            <TextView
                android:id="@+id/textMedicalSpecialty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:text="Especialidade Médica"
                android:textColor="#0C0C0C"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/spinnerMedicalSpecialty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/spinnerSpecialty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewSpecialty"
                    android:layout_marginTop="8dp"
                    tools:ignore="UnknownId" />

            </RelativeLayout>

            <!-- Campo tera a visibilidade de acordo com o tipo de usuario-->
            <EditText
                android:id="@+id/editTextCRM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="CRM"
                android:inputType="text"
                android:visibility="gone" />

            <TextView
                android:id="@+id/editTextBiologicalSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Selecione o sexo biológico?"
                android:textColor="#020202" />


            <RadioGroup
                android:id="@+id/radioGroupBiologicalSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="180dp"
                    android:text="Feminino" />

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Masculino" />
            </RadioGroup>

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="Data de nascimento"
                android:inputType="date" />

            <!-- Aceite da Política de Privacidade -->
            <CheckBox
                android:id="@+id/checkBoxPrivacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_text" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorEnabledButton"
                android:text="Cadastrar"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFF"
                android:enabled="true"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/linkLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:linksClickable="true"
                android:text="@string/link_login"
                android:textAlignment="center"
                android:textColor="#0B0A0A" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
